2004-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (WritePCXImage): Support writing large PCX files.

2004-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Look for mozilla by default rather than netscape.

2004-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/type.c (ReadTypeConfigureFile): Determine location of
	Ghostscript fonts only once in order to improve performance.
	* magick/nt_base.c (NTGhostscriptFonts): Properly determine
	Ghostscript font location for Ghostscript 8.0 and later.
	* GraphicsMagick.spec.in: Install *-config scripts with mode 755
	rather than default 644.

2004-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (InitializeModuleSearchPath): Evaluate and cache
	module search path.
	(FindMagickModule): Use cached module search path.
	(OpenModules): Load all modules rather than just the modules in
	the directory where the LOGO module is found.  Besides allowing
	user-provided modules in non-GraphicsMagick directories to be
	loaded, this allows the "moby" shared build to load additional
	modules via OpenModules.

2004-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/Makefile.am (check): Add convert -list tests.

2004-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Magick++ needs to be built as a static library
	under Cygwin and MinGW since C++ exceptions don't work otherwise.
	Be more assertive about that.
	* magick/nt_base.h: Avoid conflict with ssize_t definition under
	MinGW.

2004-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (DispatchImage): Support 8-bit output to
	common formats BGR, BGRO, BGRP, RGB, RGBO, and I as special cases
	in order to improve performance.
	(ConstituteImage): Support 8-bit input from common formats BGR,
	BGRO, BGRP, RGB, RGBO, and I as special cases in order to improve
	performance.

2004-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
